--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -2,17 +2,15 @@
     margin: 0;
     padding: 0;
     border: 0;
-    font-family: 'Gilroy';
 }
-html{
-    scroll-behavior: smooth;
-    
-}
+
 body{
-    background: #000000;
+    width: 100vw;
     height: 100vh;
-    position: relative;
-    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 nav,footer,header{
     display: block;
@@ -48,17 +46,13 @@ img{
     width: 100%;
 }
 
-input:focus::-webkit-input-placeholder { color:transparent; }
-input:focus:-moz-placeholder { color:transparent; } /* FF 4-18 */
-input:focus::-moz-placeholder { color:transparent; } /* FF 19+ */
-input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
-
-/*Цвет placeholder поиска*/
-input::-webkit-input-placeholder {color: #000000;}
-input::-moz-placeholder          {color: #000000;}/* Firefox 19+ */
-input:-moz-placeholder           {color: #000000;}/* Firefox 18- */
-input:-ms-input-placeholder      {color: #000000;}
-
+.canvas1{
+    width: 100%;
+    max-width: 800px;
+    height: auto;
+    max-height: 500px;
+    border: 2px solid #000000;
+}
 /* Extra small: 0px (320px) - 576px */
 @media (max-width: 575px){
      
